# modelo-ml-passos

./: 01. Fluxo de trabalho.md  02. Modelos de ML.md  03. Validação, Otimização e Engenharia de Features.md  README.md
Fase 01/: pyproject.toml
Fase 01/fase_01/: pyproject.toml
Fase 01/notebooks/01. flask/: app.py
Fase 01/notebooks/02. fastapi/: main.py
Fase 01/notebooks/03. BeautifulSoup/: main.py
Fase 01/notebooks/04. Autenticacao/: autenticacao_basica.py  docs_swagger.py  scrapping.py
Fase 01/notebooks/05. Receita Gourmet/: app.py  config.py
Fase 01/notebooks/05. Receita Gourmet/instance/: recipes.db
Fase 01/notebooks/06. API ML/: api_model.py
Fase 01/projects/: README.md  scrapping.py  test.ipynb  teste.ipynb
Fase 01/projects/test/: app.py
Fase 01/projects/test/templates/: index.html
