[tool.poetry]
name = "fase 01"
version = "0.1.0"
description = ""
authors = ["evandroviero <evandro.viero@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-httpauth = "^4.8.0"
flasgger = "^0.9.7.1"
beautifulsoup4 = "^4.13.3"
flask-sqlalchemy = "^3.1.1"
flask-jwt-extended = "^4.7.1"
fastapi = "^0.115.12"
uvicorn = "^0.34.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
